Add social blocks and fix css

--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -2,6 +2,9 @@
 <script>window.jQuery || document.write('<script src="{{ site.url }}/assets/js/vendor/jquery-1.9.1.min.js"><\/script>')</script>
 <script src="{{ site.url }}/assets/js/scripts.min.js"></script>
 
+<!-- www.addthis.com/dashboard -->
+<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-56792bf50afb7b6c" async="async"></script>
+
 {% if site.google_analytics %}
 <!-- Asynchronous Google Analytics snippet -->
 <script>
