Add logo, update favicon and add ya metrix

--- a/_sass/_site.scss
+++ b/_sass/_site.scss
@@ -31,6 +31,10 @@
 		float: right;
 	}
 }
+.image-center {
+    margin: 0 auto;
+    display: block;
+}
 .unstyled-list {
 	list-style: none;
 	margin-left: 0;
